# DatasetMarkupWebService

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  run.py  test-model.py
backend/: .dockerignore  Dockerfile  extract_openapi.py  pyproject.toml
backend/app/: main.py  settings.py
backend/app/admin/: __init__.py  models.py
backend/app/api/: routers.py
backend/app/api/routes/: active_learning_routes.py  annotations.py  auth_routes.py  export_routes.py  file_upload.py  ml_routes.py  tasks.py  workspace.py
backend/app/application/services/: active_learning_service.py  annotation_service.py  auth_service.py  cleanup_service.py  export_service.py  file_processing_service.py  model_factory.py  model_service.py  task_service.py  yolo_service.py
backend/app/core/: config.py
backend/app/domain/: ml_models.py  ml_schemas.py  models.py
backend/app/domain/entities/: annotation.py  annotation_task.py  base_detection_model.py  file_info.py  users.py  (+1 more)
backend/app/infrastructure/: database.py  storage.py
backend/docs/: index.html  openapi.json
backend/migrations/: env.py
backend/migrations/versions/: 05d63125c0c8_a_little_changes_with_relations.py  69c093ff785b_files_model_relations_fixes.py  c277d4065513_active_learnin.py  c48cf7a14480_add_token_model.py  f8f9dd7d08a1_users_fields_has_been_added.py
backend/model_service/: Dockerfile  docker-compose.yml  requirements.txt
backend/model_service/app/: main.py
backend/storage/: api_service.py
backend/workers/: smart_bbox_worker.py
(+118 files in other folders)
